# TinyRecursiveModels

./: .gitignore  lqr_trm.py  pretrain_lqr.py  pretrain_lqr_four.py  pretrain_muon.py  pyproject.toml  run.sh
config/: cfg_pretrain.yaml
tinyrecursivemodels.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
