[project]
name = "tinyrecursivemodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adam-atan2>=0.0.3",
    "adam-atan2-pytorch>=0.2.4",
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "huggingface-hub>=1.1.5",
    "hydra-core>=1.3.2",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "pydantic>=2.12.4",
    "pydantic-core>=2.41.5",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "triton>=3.5.1",
    "wandb>=0.23.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models", "dataset", "evaluators", "utils"]
